--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.6
-_minor=14
+_minor=15
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.6.14.lqx1.r0.gc5e1d4b90954
+pkgver=5.6.15.lqx1.r0.g7e9db3fe47a5
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
@@ -300,4 +300,4 @@ done
 
 sha512sums=('SKIP'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '2b7ace8e13862b0afd8ea65a415fb6bf29fb1088888f6cc58376a03342c7e07adea163a0446d6da7614912a9937369b1db40b285b1eed9387a033b475260c066')
+            '6b872b7ef1e2d6c9fd18d01a8f6b09809cdbcf37d3c7d76d665c1b303577f98dd9cb64cc6a6ba0d4162153e61fae58b82689a54df2285112da8179b0dd328d9c')
