--- a/linux-5.7rc/linux-aufs-git/PKGBUILD
+++ b/linux-5.7rc/linux-aufs-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-aufs-git
 _major=5.7
 _major_rc=5.7-rc
 _srcname=linux
-pkgver=5.7.rc7.r16.gb0c3ba31be3e
+pkgver=5.7.r1305.gf359287765c0
 pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
@@ -65,7 +65,7 @@ _aufs_path="aufs-patches"
 _aufs_ver="20200518"
 _aufs_patch="0001-aufs-${_aufs_ver}.patch"
 _gcc_path="cpu-patches-v3-sep"
-_gcc_patch="0001-cpu-5.7-merge-graysky-s-patchset.patch"
+_gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_aufs_path}/${_aufs_patch}"
