--- a/linux-5.7rc/linux-bfq/PKGBUILD
+++ b/linux-5.7rc/linux-bfq/PKGBUILD
@@ -73,7 +73,7 @@ _bfq_ver="v11"
 _bfq_rel="r2K200514"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="cpu-patches-v3-sep"
-_gcc_patch="0001-cpu-5.7-merge-graysky-s-patchset.patch"
+_gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=${_tag}"
         "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
