--- a/linux-5.7rc/linux-bfq-git/PKGBUILD
+++ b/linux-5.7rc/linux-bfq-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-git
 _major=5.7
 _major_rc=5.7-rc
 _srcname=linux
-pkgver=5.7.rc7.r16.gb0c3ba31be3e
+pkgver=5.7.r1305.gf359287765c0
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -71,7 +71,7 @@ _bfq_ver="v11"
 _bfq_rel="r2K200514"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="cpu-patches-v3-sep"
-_gcc_patch="0001-cpu-5.7-merge-graysky-s-patchset.patch"
+_gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
