--- a/linux-5.7rc/linux-uksm/PKGBUILD
+++ b/linux-5.7rc/linux-uksm/PKGBUILD
@@ -68,7 +68,7 @@ _uksm_path="uksm-patches-v3"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="0001-UKSM-for-${_major}.patch"
 _gcc_path="cpu-patches-v3-sep"
-_gcc_patch="0001-cpu-5.7-merge-graysky-s-patchset.patch"
+_gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git#tag=${_tag}"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
