--- a/linux-5.7rc/linux-uksm-git/PKGBUILD
+++ b/linux-5.7rc/linux-uksm-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-uksm-git
 _major=5.7
 _major_rc=5.7-rc
 _srcname=linux
-pkgver=5.7.rc7.r16.gb0c3ba31be3e
+pkgver=5.7.r1305.gf359287765c0
 pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
@@ -66,7 +66,7 @@ _uksm_path="uksm-patches-v3"
 #_uksm_path="https://raw.githubusercontent.com/zaza42/uksm/master"
 _uksm_patch="0001-UKSM-for-${_major}.patch"
 _gcc_path="cpu-patches-v3-sep"
-_gcc_patch="0001-cpu-5.7-merge-graysky-s-patchset.patch"
+_gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git"
         "${_lucjanpath}/${_uksm_path}/${_uksm_patch}"
