--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.6
-_minor=15
-_lqx=lqx2
+_minor=16
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.6.15.lqx2.r0.g471803d5f9c2
+pkgver=5.6.16.lqx1.r0.g903eb5628450
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
