--- a/linux-5.8/stable-rc-git/linux-bfq-dev-git/PKGBUILD
+++ b/linux-5.8/stable-rc-git/linux-bfq-dev-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.8
 _srcname=linux-stable-rc
-pkgver=5.8.r0.gbcf876870b95
-pkgrel=2
+pkgver=5.8.3.r149.g8960c0bf1993
+pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -344,4 +344,4 @@ sha512sums=('SKIP'
             'd4bf28aade6156d0ecce47f3872bde11c50cf41142f36154d8bb96e86e06e25aaceaa5b100514d2f31a08fb56bbf3d5a586d8202fd1d3a272fd2dc5f1d0bd591'
             'a65585dae67910c788a66f0bb478a801b7deac05aed5a5100b0f0be951f7e97d5489c9b265d9d16dccf57030788b92d13328b11a5f5e8f82cb532954682361be'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
-            '9b6f7fb3fb5d28e5cd151fd4a0f2b6c4e555df383f668d872bc4af2d99e76e55191b314bed6fd790e74325a485063a9eb8eb98c3449419f85d5df5d839baf45c')
+            '2c434ed6dcb6807f9145ec69249ac0d23b4528c86f0b7917a32c5526f3865072a6ab5c3886e9dccbf9c0ccfbc5819ebb45b5cfaa7552d804380e449cb19a8199')
