--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -45,10 +45,10 @@ _use_current=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.7
-_minor=17
+_minor=18
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.7.17.lqx1.r0.g17b7e1ed1c0
+pkgver=5.7.18.lqx1.r0.gbb9f96b4461
 pkgrel=1
 pkgdesc='Linux LQX'
 arch=('x86_64')
