--- a/Devel/Config/5.9-rc/src/uksm/config
+++ b/Devel/Config/5.9-rc/src/uksm/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 5.9.0-arch2 Kernel Configuration
+# Linux/x86 5.9.0-arch3 Kernel Configuration
 #
 CONFIG_CC_VERSION_TEXT="gcc (GCC) 10.1.0"
 CONFIG_CC_IS_GCC=y
@@ -4593,6 +4593,7 @@ CONFIG_SPI_TLE62X0=m
 CONFIG_SPI_SLAVE=y
 CONFIG_SPI_SLAVE_TIME=m
 CONFIG_SPI_SLAVE_SYSTEM_CONTROL=m
+CONFIG_SPI_DYNAMIC=y
 CONFIG_SPMI=m
 CONFIG_HSI=m
 CONFIG_HSI_BOARDINFO=y
@@ -8906,7 +8907,7 @@ CONFIG_CLKDEV_LOOKUP=y
 CONFIG_HAVE_CLK_PREPARE=y
 CONFIG_COMMON_CLK=y
 CONFIG_COMMON_CLK_WM831X=m
-# CONFIG_CLK_HSDK is not set
+CONFIG_CLK_HSDK=y
 CONFIG_COMMON_CLK_MAX77686=m
 CONFIG_COMMON_CLK_MAX9485=m
 CONFIG_COMMON_CLK_RK808=m
