--- a/linux-5.8/stable-rc-git/linux-bfq-dev-git/PKGBUILD
+++ b/linux-5.8/stable-rc-git/linux-bfq-dev-git/PKGBUILD
@@ -49,7 +49,7 @@ pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
 _major=5.8
 _srcname=linux-stable-rc
-pkgver=5.8.5.r0.g9ece50d8a470
+pkgver=5.8.5.r243.gc9d1fc47ca62
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -63,7 +63,7 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 # Some patches for BFQ conflict with patches for BFQ-dev.
 # To use linux-bfq-dev-git smoothly apply bfq-reverts before bfq-dev patch.
 # Otherwise the kernel will not compile.
-_bfq_rev_path="bfq-reverts-all"
+_bfq_rev_path="bfq-reverts-v2-all"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v12"
@@ -338,7 +338,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'ee27231ea9d9fb81c5da64964a85daed3ac12f3b43176f2508f217c2ff0d8b634b9b532adc3cd640e28af221a78b319f40e0ec4b6e690a2322bd9ff6afb77cb1'
+            '06f4726f4380c0e246bd25a5ac8c7189545bd9cbe62add2e6b8cc6baf823b9af28f3a6d6e93ec91d603b0fbecad5520cd623d25315baee26b2532a168fb322fe'
             '98d74575156a8d32b1f92342b7545719240979d2b14aa6a636610ea2f0c459bd4ca8bd7f06726344d983d53b35e10e6333f7fce9280c1b816916a916dce5492d'
             '87162080b8dcca5316951c59a90fa2b516e242c2b20b329080db00a56b88ae5269ab20a58086d19de55b56f2d81a43d0fcc594273a76e78e6741652ea5832365'
             'd4bf28aade6156d0ecce47f3872bde11c50cf41142f36154d8bb96e86e06e25aaceaa5b100514d2f31a08fb56bbf3d5a586d8202fd1d3a272fd2dc5f1d0bd591'
