--- a/linux-5.8/stable-rc/linux-bfq-dev/PKGBUILD
+++ b/linux-5.8/stable-rc/linux-bfq-dev/PKGBUILD
@@ -48,14 +48,14 @@ _1k_HZ_ticks=
 pkgbase=linux-bfq-dev
 # pkgname=('linux-bfq-dev' 'linux-bfq-dev-headers' 'linux-bfq-dev-docs')
 _major=5.8
-_minor=4
+_minor=5
 _minorc=$((_minor+1))
 _rcver=rc1
 pkgver=${_major}.${_minorc}
 _stable=${_major}.${_minor}
 _stablerc=${pkgver}-${_rcver}
 _srcname=linux-${_stable}
-pkgrel=0.1
+pkgrel=0
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -68,7 +68,7 @@ _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 # Some patches for BFQ conflict with patches for BFQ-dev.
 # To use linux-bfq-dev smoothly apply bfq-reverts before bfq-dev patch.
 # Otherwise the kernel will not compile.
-_bfq_rev_path="bfq-reverts-all"
+_bfq_rev_path="bfq-reverts-v2-all"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v12"
@@ -345,11 +345,11 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha512sums=('b1fb4586932369f2853360aaab702baaa994be5a88c0a746b7272d7c29c864ac2f0302bd82664f58d29f7b464bc98603167211ea886aa15ea1cd6d12d422ba61'
+sha512sums=('30832e10d14f87f62542cc8a58d2d7d54cbfd0e99de772f79364354a09c2aff2c5bd07bcd06e1e7523a404aa39829355b6b198334472d3070dc7a4f810ed0f20'
             'SKIP'
-            '37a55c0024b6f5ff885dd695399090add3564b4b028b9cbc7d69f74f3845afbb8ac83390ee24354a14a7714273475a798fc13d11b686f245ba3388c9afe74eaa'
+            '850b9b4a20551156299068840550a58e103833487cb55a25459c8532d76b32893678b87d7bb4fbe72f526949fa252c412fbf88371bc6334dce87d7f08b5fb81a'
             'SKIP'
-            'ee27231ea9d9fb81c5da64964a85daed3ac12f3b43176f2508f217c2ff0d8b634b9b532adc3cd640e28af221a78b319f40e0ec4b6e690a2322bd9ff6afb77cb1'
+            '06f4726f4380c0e246bd25a5ac8c7189545bd9cbe62add2e6b8cc6baf823b9af28f3a6d6e93ec91d603b0fbecad5520cd623d25315baee26b2532a168fb322fe'
             '98d74575156a8d32b1f92342b7545719240979d2b14aa6a636610ea2f0c459bd4ca8bd7f06726344d983d53b35e10e6333f7fce9280c1b816916a916dce5492d'
             'd4bf28aade6156d0ecce47f3872bde11c50cf41142f36154d8bb96e86e06e25aaceaa5b100514d2f31a08fb56bbf3d5a586d8202fd1d3a272fd2dc5f1d0bd591'
             'a65585dae67910c788a66f0bb478a801b7deac05aed5a5100b0f0be951f7e97d5489c9b265d9d16dccf57030788b92d13328b11a5f5e8f82cb532954682361be'
