--- a/linux-lqx-rebranded/linux-lqx-tag/config
+++ b/linux-lqx-rebranded/linux-lqx-tag/config
@@ -9966,7 +9966,14 @@ CONFIG_BINARY_PRINTF=y
 #
 # Library routines
 #
+
+#
+# RAID 6
+#
 CONFIG_RAID6_PQ=m
+# CONFIG_RAID6_FORCE_ALGO is not set
+# end of RAID 6
+
 CONFIG_RAID6_PQ_BENCHMARK=y
 CONFIG_LINEAR_RANGES=y
 CONFIG_PACKING=y
