--- a/linux-lqx-rebranded/linux-lqx-dev-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-dev-git/PKGBUILD
@@ -63,7 +63,7 @@ arch=('x86_64')
 url="http://liquorix.net/"
 license=('GPL2')
 options=('!strip')
-makedepends=(bc kmod libelf zstd git)
+makedepends=(bc kmod libelf git)
 if [ -n "$_htmldocs_enable" ]; then
     makedepends+=(xmlto python-sphinx python-sphinx_rtd_theme graphviz imagemagick)
 fi
