--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -57,13 +57,13 @@ _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
 pkgver=5.8.6.1.r1708.g7e2fc1e
-pkgrel=3
+pkgrel=4
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="http://liquorix.net/"
 license=('GPL2')
 options=('!strip')
-makedepends=(bc kmod libelf zstd git)
+makedepends=(bc kmod libelf git)
 if [ -n "$_htmldocs_enable" ]; then
     makedepends+=(xmlto python-sphinx python-sphinx_rtd_theme graphviz imagemagick)
 fi
