--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,13 +52,13 @@ _minor=6
 _lqx=lqx1
 _srcname=zen-kernel
 pkgver=5.8.6.lqx1.r0.g356c15bb2978
-pkgrel=3
+pkgrel=4
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
 options=('!strip')
-makedepends=(bc kmod libelf zstd git)
+makedepends=(bc kmod libelf git)
 if [ -n "$_htmldocs_enable" ]; then
     makedepends+=(xmlto python-sphinx python-sphinx_rtd_theme graphviz imagemagick)
 fi
