--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,11 +48,11 @@ _htmldocs_enable=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lqx-tag-git-docs')
 _major=5.8
-_minor=6
+_minor=7
 _lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.8.6.lqx1.r0.g356c15bb2978
-pkgrel=4
+pkgver=5.8.7.lqx1.r0.gb12ebc61a765
+pkgrel=1
 pkgdesc='Linux Liquorix'
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
