--- a/linux-5.9rc/linux-bfq-dev-git/PKGBUILD
+++ b/linux-5.9rc/linux-bfq-dev-git/PKGBUILD
@@ -50,7 +50,7 @@ pkgbase=linux-bfq-dev-git
 _major=5.9
 _major_rc=5.9-rc
 _srcname=linux
-pkgver=5.9.rc3.r223.g59126901f200
+pkgver=5.9.rc4.r26.g34d4ddd359db
 pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
@@ -68,7 +68,7 @@ _bfq_rev_path="bfq-reverts-v2-all"
 _bfq_rev_patch="0001-bfq-reverts.patch"
 _bfq_path="bfq-dev-lucjan"
 _bfq_ver="v12"
-_bfq_rel="r2K200818"
+_bfq_rel="r2K200909"
 _bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
 _gcc_path="cpu-patches-sep"
 _gcc_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
@@ -338,7 +338,7 @@ done
 
 sha512sums=('SKIP'
             '78ee9a12aea86ea0d832f70081a700c1d8f7edc561e07d574b47240f9d4c5de6232bcb30da6e3fa8ae889e69e8037f3949ae0ffecc91fdc40c623ad7c3ef46e5'
-            '2bae42e2c6e2fbe58f93a93f598db3205cc80117cbbd358a6a956b5859189d77a999921650de43a7bc13fbd0e601f8cbe6eb55d4c53c6f29c3fc3527975d424c'
+            '6c46d201521082b3f6d41efc5414b1fe6b3148f35e50f4ef2b75be55cea746f7d5b205b5ab79f800cf2cfd5ecd615b7fe97dcdc9da2fcc13a585de4db7fa6cca'
             '0c24d75a1350d1e974df342d77cb98bdc9c84a9af03788ff95e152c95d292b72ca870bb1e3b963a8f3a3387471e13e038b4bd1dc8b4063851a40e43e55c075c4'
             '6be8788bfa09f67273682cba1c4566cd1dc48b162c193a482d6565148779c80b6fb2fbe73d2d417dd9e53ca7a69d4ac2012fc98a48a8a0fcd5ac05161e7539c5'
             '98e97155f86bbe837d43f27ec1018b5b6fdc6c372d6f7f2a0fe29da117d53979d9f9c262f886850d92002898682781029b80d4ee923633fc068f979e6c8254be'
